# rust-template

./: .envrc  Cargo.toml  Dockerfile  Makefile.toml  env
adapter/: Cargo.toml
adapter/migrations/: 20250815120802_start.down.sql  20250815120802_start.up.sql
adapter/src/: lib.rs
adapter/src/database/: mod.rs
adapter/src/database/model/: auth.rs  book.rs  checkout.rs  user.rs
adapter/src/redis/: mod.rs  model.rs
adapter/src/repository/: auth.rs  book.rs  checkout.rs  health.rs  user.rs
api/: Cargo.toml
api/src/: extractor.rs  lib.rs  openapi.rs
api/src/handler/: auth.rs  book.rs  checkout.rs  health.rs  mod.rs  user.rs
api/src/model/: auth.rs  book.rs  checkout.rs  user.rs
api/src/route/: book.rs  health.rs  user.rs  v1.rs
data/: initial_setup.sql
kernel/: Cargo.toml
kernel/src/model/: id.rs  list.rs  mod.rs
kernel/src/model/auth/: event.rs
kernel/src/model/book/: event.rs  mod.rs
kernel/src/model/checkout/: mod.rs
kernel/src/model/user/: mod.rs
kernel/src/model/util/: unit.rs
kernel/src/repository/: auth.rs  book.rs  checkout.rs  mod.rs  user.rs
registry/src/: lib.rs
rstest-example/: Cargo.toml
rstest-example/src/: lib.rs
shared/: Cargo.toml
shared/src/: config.rs  env.rs  error.rs
src/: main.rs
