[package]
name = "app"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "app"
path = "src/bin/app.rs"

[workspace]
members = ["api", "kernel", "adapter", "shared", "registry"]

[workspace.dependencies]
adapter = { path = "./adapter" }
api = { path = "./api" }
kernel = { path = "./kernel" }
shared = { path = "./shared" }
registry = { path = "./registry" }
anyhow = "1.0.99"
axum = { version = "0.8.4", features = ["macros"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "uuid",
    "chrono",
    "macros",
    "postgres",
    "migrate"
] }
tokio = { version = "1.47.1", features = ["full"] }
async-trait = "0.1.88"
derive-new = "0.7.0"

[dependencies]
adapter.workspace = true
api.workspace = true
shared.workspace = true
registry.workspace = true
anyhow.workspace = true
tokio.workspace = true
axum.workspace = true